# collajit

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  helpers.test.ts  helpers.ts  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
src/collajit/: __init__.py  __main__.py  app.py  config.py
src/collajit/engine/: __init__.py  compositor.py  features.py  image_ops.py  matcher.py
src/collajit/fetch/: __init__.py  downloader.py  planner.py  service.py  tagger.py
src/collajit/fetch/sources/: __init__.py  base.py  met.py  openverse.py  pexels.py  wikimedia.py
src/collajit/generators/: __init__.py  freeform.py  generative.py  mosaic.py
src/collajit/model/: __init__.py  layer.py  project.py
src/collajit/server/: __init__.py  app.py  jobs.py
src/collajit/ui/: __init__.py  canvas.py  fetch_panel.py  layers_panel.py  library_panel.py  main_window.py  worker.py
src/collajit/ui/panels/: __init__.py  freeform_panel.py  generative_panel.py  mosaic_panel.py
tests/: conftest.py  test_engine.py  test_fetch.py  test_generators.py  test_library.py  test_project.py  test_server.py  test_ui_smoke.py
