[package]
name = "collajit"
version = "0.1.0"
description = "collajit — digital art from large image collections"
edition = "2021"
rust-version = "1.77"

[lib]
name = "collajit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"

[profile.release]
strip = true
